--- a/Project#1 (calculator)/გვერდი-მთავარი/index.html
+++ b/Project#1 (calculator)/გვერდი-მთავარი/index.html
@@ -54,20 +54,22 @@
                         <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarsExample04">
-                           <ul class="navbar-nav mr-auto">
-                              <li class="nav-item active">
-                                 <a class="nav-link" href="#">მთავარი</a>
-                              </li>
-                              <li class="nav-item">
-                                 <a class="nav-link" href="#aboutus"> ჩვენს შესახებ</a>
-                              </li>
-                              <li class="nav-item">
-                                 <a class="nav-link" href="#calculator"> მათემატიკა</a>
-                              </li>
-                              <li class="nav-item">
-                                 <a class="nav-link" href="#games"> გართობა</a>
-                              </li>
-                           </ul>
+                           <div class="navbarstyle">
+                              <ul class="navbar-nav mr-auto">
+                                 <li class="nav-item active">
+                                    <a class="nav-link" href="#"> <span class="navstyle">მთავარი</span></a>
+                                 </li>
+                                 <li class="nav-item">
+                                    <a class="nav-link" href="#aboutus"><span  class="navstyle"> ჩვენს შესახებ</span></a>
+                                 </li>
+                                 <li class="nav-item">
+                                    <a class="nav-link" href="#calculator"><span  class="navstyle"> სერვისები</span></a>
+                                 </li>
+                                 <li class="nav-item">
+                                    <a class="nav-link" href="#games"><span  class="navstyle"> გართობა</span></a>
+                                 </li>
+                              </ul>
+                           </div>
                         </div>
                      </nav>
                   </div>
@@ -83,8 +85,11 @@
             <div class="row d_flex">
                <div class="col-md-5">
                   <div class="text-bg">
-                     <h1>STEM<br> calculator</h1>                     
-                     <p style="color: #fdd430;"> ეს საიტი რას შვება მაგას ვწერთ (კალკულატორი, თამაშები, ისა, ესა) </p>
+                     <h1>STEM<br> calculator</h1> 
+                     <br>
+                     <br>
+                     <br>
+                     <br>
                      <a href="#">კიდე რაღაც</a>
                   </div>
                </div>
@@ -134,23 +139,29 @@
             <div class="row">
                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                   <div class="Services-box">
-                     <i><img src="images/service1.png" alt="#" /></i>
-                     <h3> კიდე რაღაც (მათემატიკის კალკულატორი)</h3>
-                     <p>ავხსნით ფორმულებს? (რამეს მოვიფიქრებთ)</p>
+                     <a href="../გვერდი-მათემატიკა/math.html">
+                        <i><img src="images/service1.png" alt="#" /></i>
+                        <h3>მათემატიკის კალკულატორი</h3>
+                        <p>ავხსნით ფორმულებს? (რამეს მოვიფიქრებთ)</p>
+                     </a>
                   </div>
                </div>
                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                   <div class="Services-box">
+                     <a href="../გვერდი-მათემატიკა/math.html">
                      <i><img src="images/service2.png" alt="#" /></i>
-                     <h3>კიდე რაღაც (ქიმიის კალკულატორი)</h3>
+                     <h3>ფიზიკის კალკულატორი</h3>
                      <p>ავხსნით ფორმულებს? (რამეს მოვიფიქრებთ)</p>
+                     </a>
                   </div>
                </div>
                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                   <div class="Services-box">
+                  <a href="../გვერდი-მათემატიკა/math.html">
                      <i><img src="images/service3.png" alt="#" /></i>
-                     <h3>კიდე რაღაც (ბიოლოგიის კალკულატორი)</h3>
-                     <p>ავხსნით ფორმულებს? (რამეს მოვიფიქრებთ)</p>
+                     <h3>ქიმიის კალკულატორი</h3>
+                     <p>(წვდომა გექნებათ მალე!)</p>
+                     </a>
                   </div>
                </div>
                <a class="read_more" href="#">კიდე რაღაც</a>
@@ -173,24 +184,24 @@
                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                   <div id="box_ho" class="why-box">
                      <i><img src="images/why1.png" alt="#" /></i>
-                     <h3>კიდე რაღაც (თამაშები)</h3>
-                     <p>აქ თამაშის პრინციპს ავხსნით </p>
+                     <h3>(თამაშები)</h3>
+                     <p>(წვდომა გექნებათ მალე!)</p>
                   </div>
                   <a class="read_more bg" href="#">აქ რამე</a>
                </div>
                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                   <div class="why-box">
                      <i><img src="images/why2.png" alt="#" /></i>
-                     <h3>კიდე რაღაც (თამაშები)</h3>
-                     <p>აქ თამაშის პრინციპს ავხსნით </p>
+                     <h3>(თამაშები)</h3>
+                     <p>(წვდომა გექნებათ მალე!)</p>
                   </div>
                   <a class="read_more bg" href="#">აქ რამე</a>
                </div>
                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                   <div class="why-box">
                      <i><img src="images/why3.png" alt="#" /></i>
-                     <h3>კიდე რაღაც (თამაშები)</h3>
-                     <p>აქ თამაშის პრინციპს ავხსნით </p>
+                     <h3>(თამაშები)</h3>
+                     <p>(წვდომა გექნებათ მალე!)</p>
                   </div>
                   <a class="read_more bg" href="#">არ რამე</a>
                </div>
