--- a/Project#1 (calculator)/გვერდი-მათემატიკა/math.html
+++ b/Project#1 (calculator)/გვერდი-მათემატიკა/math.html
@@ -10,8 +10,11 @@
 </head>
 
 <body>
+  <header>
+    <a  href="../გვერდი-მთავარი/index.html"><img class="goback" src="../გვერდი-მთავარი/images/back-arrow.png" alt="go back"></a>
+  </header>
+  <main>
   <div class="wrapper">
-    <h1 style="text-align:center">JS calculator.</h1>
     <div class="calc">
       <div class="top">
         <div class='result'></div>
@@ -20,31 +23,8 @@
       <div class="keyboard">
 
         <div class="crow">
-          <div class='cb cbac'>AC</div>
           <div class="cb cbpar" key='('>(</div>
           <div class="cb cbpar" key=')'>)</div>
-          <div class='cb cbce'>CE</div>
-        </div>
-
-        <div class="crow">
-          <div class="cb cbnum" key='pi'>π</div>
-          <div class="cb cbnum" key='e'>e</div>
-          <div class="cb cbnum" key='phi'>φ</div>
-          <div class="cb cbnum" key='tau'>τ</div>
-        </div>
-
-        <div class="crow">
-          <div class="cb cbinv">Inv</div>
-          <div class="cb cbfun" key1='sin(' key2="asin(">sin<sup class="inv">-1</sup></div>
-          <div class="cb cbfun" key1='cos(' key2="acos(">cos<sup class="inv">-1</sup></div>
-          <div class="cb cbfun" key1='tan(' key2="atan(">tan<sup class="inv">-1</sup></div>
-        </div>
-
-        <div class="crow">
-          <div class="cb cbfun" key1='log10('>log</div>
-          <div class="cb cbfun" key1='log('>ln</div>
-          <div class="cb cbop" key='!' char='!'>!</div>
-          <div class="cb cbop" key='deg' char='deg'>deg</div>
         </div>
 
         <div class="crow">
@@ -78,13 +58,13 @@
         <div class="crow">
           <div class="cb cbnum lighter" key='0'>0</div>
           <div class="cb cbnum lighter" key='.'>.</div>
-          <div class="cb cbop lighter" key='E' char='E'>exp</div>
+          <div class="cb cbnum" key='pi' key='E' char='E'>π</div>
           <div class="cb cbop operands" key='+' char='+'>+</div>
         </div>
 
         <div class="crow">
-          <div class="cb cbrnd" style="width:25%">Rnd</div>
-          <div class="cb cbans" style="width:25%">Ans</div>
+          <div class='cb cbac' style="width:25%">AC</div>
+          <div class='cb cbce' style="width:25%">CE</div>
           <div class="cb enter" style="width:50%">=</div>
         </div>
 
@@ -92,6 +72,10 @@
     </div>
   </div>
   <script src="math.js"></script>
+</main>
+<footer>
+
+</footer>
 </body>
 
 </html>
