--- a/Project#1 (calculator)/გვერდი-მთავარი/index.html
+++ b/Project#1 (calculator)/გვერდი-მთავარი/index.html
@@ -141,8 +141,8 @@
                   <div class="Services-box">
                      <a href="../გვერდი-მათემატიკა/math.html">
                         <i><img src="images/service1.png" alt="#" /></i>
-                        <h3>მათემატიკის კალკულატორი</h3>
-                        <p>ავხსნით ფორმულებს? (რამეს მოვიფიქრებთ)</p>
+                        <h3>მათემატიკის<br> კალკულატორი</h3>
+                        <p>(მოხმარება შესაძლებელია!)</p>
                      </a>
                   </div>
                </div>
@@ -150,16 +150,16 @@
                   <div class="Services-box">
                      <a href="../გვერდი-მათემატიკა/math.html">
                      <i><img src="images/service2.png" alt="#" /></i>
-                     <h3>ფიზიკის კალკულატორი</h3>
-                     <p>ავხსნით ფორმულებს? (რამეს მოვიფიქრებთ)</p>
+                     <h3>ფიზიკის<br> კალკულატორი</h3>
+                     <p>(წვდომა გექნებათ მალე!)</p>
                      </a>
                   </div>
                </div>
                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                   <div class="Services-box">
-                  <a href="../გვერდი-მათემატიკა/math.html">
+                  <a href="../გვერდი-ქიმია/chem.html">
                      <i><img src="images/service3.png" alt="#" /></i>
-                     <h3>ქიმიის კალკულატორი</h3>
+                     <h3>ქიმიის<br> კალკულატორი</h3>
                      <p>(წვდომა გექნებათ მალე!)</p>
                      </a>
                   </div>
