--- a/Project#1 (calculator)/გვერდი-მთავარი/index.html
+++ b/Project#1 (calculator)/გვერდი-მთავარი/index.html
@@ -148,7 +148,7 @@
                </div>
                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                   <div class="Services-box">
-                     <a href="../გვერდი-მათემატიკა/math.html">
+                     <a href="#">
                      <i><img src="images/service2.png" alt="#" /></i>
                      <h3>ფიზიკის<br> კალკულატორი</h3>
                      <p>(წვდომა გექნებათ მალე!)</p>
