--- a/Project#1 (calculator)/game1/game1.html
+++ b/Project#1 (calculator)/game1/game1.html
@@ -5,16 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock,Paper,Scissors</title>
 </head>
 <body>
     <header class="header">
-        <div class="container">
-          <h1><span class="rock">Rock</span>, <span class="paper">paper</span>, <span class="scissors">scissors<span class="shoot">, shoot</span></h1>
+        <div class="title">
+          <h1>Rock,Paper,Scissors</h1>
         </div>
       </header>
-      <div class="main">
-        <div class="container">
+      <main>
+      <div>
+        <div class="flexbox">
           <section class="content">
             <button class="play rock" type="button" onclick="play('rock')"></button>
             <button class="play paper" type="button" onclick="play('paper')"></button>
@@ -34,6 +35,7 @@
           </aside>
         </div>
       </div>
+    </main>
       <script src="game1.js"></script>
 </body>
 </html>
