--- a/Project#1 (calculator)/გვერდი-მთავარი/index.html
+++ b/Project#1 (calculator)/გვერდი-მთავარი/index.html
@@ -182,27 +182,33 @@
             </div>
             <div class="row">
                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
+                  <a href="../game1/game1.html">
                   <div id="box_ho" class="why-box">
                      <i><img src="images/why1.png" alt="#" /></i>
-                     <h3>(თამაშები)</h3>
-                     <p>(წვდომა გექნებათ მალე!)</p>
+                     <h3>Rock,Paper,Scissors</h3>
+                     <p>(მოხმარება შესაძლებელია!)</p>
+                  </a>
                   </div>
                   <a class="read_more bg" href="#">აქ რამე</a>
                </div>
                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
+                  <a href="%">
                   <div class="why-box">
                      <i><img src="images/why2.png" alt="#" /></i>
                      <h3>(თამაშები)</h3>
                      <p>(წვდომა გექნებათ მალე!)</p>
                   </div>
+               </a>
                   <a class="read_more bg" href="#">აქ რამე</a>
                </div>
                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
+                  <a href="#">
                   <div class="why-box">
                      <i><img src="images/why3.png" alt="#" /></i>
                      <h3>(თამაშები)</h3>
                      <p>(წვდომა გექნებათ მალე!)</p>
                   </div>
+               </a>
                   <a class="read_more bg" href="#">არ რამე</a>
                </div>
             </div>
