--- a/Project#1 (calculator)/game1/game1.html
+++ b/Project#1 (calculator)/game1/game1.html
@@ -16,9 +16,9 @@
   <div class="main">
     <div class="container">
       <section class="content">
-        <button class="play rock" type="button" onclick="play('rock')"></button>
-        <button class="play paper" type="button" onclick="play('paper')"></button>
-        <button class="play scissors" type="button" onclick="play('scissors')"></button>
+        <button class="play rock" type="button" onclick="play('rock')">Rock</button>
+        <button class="play paper" type="button" onclick="play('paper')">Paper</button>
+        <button class="play scissors" type="button" onclick="play('scissors')">Scissors</button>
         <div style="clear:both;"></div>
         <p><span id="player"></span> <span id="opponent"></span></p>
         <h2 id="results"></h2>
